vitrail-pg-macros/tests/ui/fail/unknown_query_filter_field.stderr
error: unknown scalar field `bid` in `where(...)` filter for model `user`
  --> tests/ui/fail/unknown_query_filter_field.rs:3:1
   |
 3 | / schema! {
 4 | |     name query_schema
 5 | |
 6 | |     model user {
...  |
10 | | }
   | |_^
...
17 |   #[derive(QueryResult)]
   |            ----------- in this derive macro expansion
   |
   = note: this error originates in the macro `__vitrail_assert_where_query_schema_user` which comes from the expansion of the derive macro `QueryResult` (in Nightly builds, run with -Z macro-backtrace for more info)
